--- a/.gitignore
+++ b/.gitignore
@@ -11,22 +11,13 @@
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
 # Executables
 *.exe
 *.out
 *.app
+
+# Ignore directory used by Visual Studio for project generation
+build
+# Ignore directories used by CLion for project generation
+.idea
+cmake-build-debug
